Fix vuepress content class that breaks the code styling

--- a/src/.vuepress/theme/styles/code.scss
+++ b/src/.vuepress/theme/styles/code.scss
@@ -1,6 +1,6 @@
 @import "config";
 
-.content {
+.content-body {
   code {
     color: lighten($textColor, 20%);
     padding: 0.25rem;
@@ -55,7 +55,7 @@
     &::before {
       position: absolute;
       z-index: 3;
-      top: 0.8em;
+      top: 0.6em;
       right: 1em;
       font-size: 0.75rem;
       color: rgba(255, 255, 255, 0.4);
